<resources>
    <string name="login">LOG IN</string>
    <string name="username">username</string>
    <string name="BaseUrl">http://10.0.2.2:5000/api/Tokens</string>
    <string name="app_name">WINK</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="add_person">add contact</string>
    <string name="add">Add</string>
    <string name="enter_username">Enter Username</string>

    <string name="signUp">SIGN UP</string>
    <string name="already">already registered? click the button</string>
    <string name="upload">Upload Image</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="display_name">Display name</string>
    <string name="wink_since_2023">WINK since 2023</string>
    <string name="not_register">Don\'t hava an account? click the button</string>
    <string name="type_a_message">Type a message…</string>
    <string name="enter_ip_address">server IP here</string>
    <string name="server_ip_address">Enter server IP address</string>
    <string name="dark_mode">Dark mode</string>
    <string name="the_password_or_the_username_is_incorrect">The password or the username is incorrect</string>


</resources>