<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@color/primaryColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textColor="#938A8A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:padding="8dp" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:background="@color/primaryColor"
        android:layout_marginTop="16dp" />

</LinearLayout>
