<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkBackground"
    android:layout_height="match_parent">

    <!-- Contacts List -->
    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:elevation="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/upperBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contact_bar"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <!-- User Photo -->
            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/circle_image" />

            <!-- User Name -->

            <!-- Settings Button -->

            <!-- Logout Button -->

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/userPhoto"
                android:text="User"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/logoutButton"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/settings"
                android:scaleType="centerInside"
                android:src="@drawable/ic_settings_dark" />

            <ImageButton
                android:id="@+id/logoutButton"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/logout"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logout" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstChats"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addContact"
            android:layout_margin="10dp"
            android:layout_alignEnd="@id/lstChats"
            android:layout_alignBottom="@id/lstChats"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@null"
            android:background="@drawable/circular_button_background"
            android:contentDescription="@string/add_person"
            />
        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>