<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/demoBgLayout"
    android:background="@drawable/demo_bg"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayoutStyle"
            app:hintTextColor="@color/white">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_margin="13dp"
                android:background="@drawable/input_background"
                android:fontFamily="@font/andika_new_basic"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/color_selector" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body2"
            app:hintTextColor="#FFFFFF">


            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_margin="13dp"
                android:background="@drawable/input_background"
                android:fontFamily="@font/andika_new_basic"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



            <EditText
                android:id="@+id/confirmEditText"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_margin="13dp"
                android:background="@drawable/input_background"
                android:fontFamily="@font/andika_new_basic"
                android:hint="Confirm password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />


        <EditText
            android:id="@+id/displayEditText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_margin="13dp"
            android:background="@drawable/input_background"
            android:hint="Display name"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />


            <ImageView
                android:id="@+id/circleImageView"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_image"
                android:scaleType="fitXY" />


        <Button
            android:id="@+id/signUp"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/custom_button_background"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/signUp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/already"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/custom_button_background"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>